[tool.poetry]
name = "gpt-proxy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gpt_proxy"}]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.7.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
orjson = "^3.8.12"
python-dotenv = "^1.0.0"
httpx = "^0.24.0"
pytz = "^2023.3"
sparrow-python = "^0.1.3"
schema = "^0.7.5"
schemas = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
